--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -72,5 +72,16 @@
                         <button id="4-view">View</button></a>
                 </div>
             </div>
+
+            <!--Assignment 5-->
+            <div>
+                <h2 id="Assignment5">Responsive</h2>
+                <img id="5-img" src="../pages/assets/images/assignment5.JPG" alt="">
+                <div id="5-div">
+                    <p id="5-p"> "In this we learned how to do responsive a web page."</p>
+                    <a href="https://github.com/sachinivindoya/Assignment05" target="_blank">
+                        <button id="5-view">View</button></a>
+                </div>
+            </div>
 </body>
 </html>
