--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -83,5 +83,16 @@
                         <button id="5-view">View</button></a>
                 </div>
             </div>
+
+            <!--Assignment 6-->
+            <div>
+                <h2 id="Assignment6">Boostrap</h2>
+                <img id="6-img" src="../pages/assets/images/assignment6.JPG" alt="">
+            <div id="6-div">
+                <p id="6-p"> "In this we learned how to use boostrap framework."</p>
+                <a href="https://github.com/sachinivindoya/IJSE-Assignment6" target="_blank">
+                    <button id="6-view">View</button></a>
+            </div>
+            </div>
 </body>
 </html>
