--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -88,11 +88,22 @@
             <div>
                 <h2 id="Assignment6">Boostrap</h2>
                 <img id="6-img" src="../pages/assets/images/assignment6.JPG" alt="">
-            <div id="6-div">
-                <p id="6-p"> "In this we learned how to use boostrap framework."</p>
-                <a href="https://github.com/sachinivindoya/IJSE-Assignment6" target="_blank">
-                    <button id="6-view">View</button></a>
+                <div id="6-div">
+                    <p id="6-p"> "In this we learned how to use boostrap framework."</p>
+                    <a href="https://github.com/sachinivindoya/IJSE-Assignment6" target="_blank">
+                     <button id="6-view">View</button></a>
+                 </div>
             </div>
+
+            <!--Assignment 7-->
+            <div>
+                <h2 id="Assignment7">Single Page Application</h2>
+                <img id="7-img" src="../pages/assets/images/assignment7.JPG" alt="">
+                <div id="7-div">
+                    <p id="7-p"> "In this we learned how to create a single page application using boostrap framework."</p>
+                    <a href="https://github.com/sachinivindoya/IJSE-Assignment07" target="_blank">
+                        <button id="7-view">View</button></a>
+                </div>
             </div>
 </body>
 </html>
