--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -105,5 +105,16 @@
                         <button id="7-view">View</button></a>
                 </div>
             </div>
+
+            <!--Assignment 8-->
+            <div>
+                <h2 id="Assignment8">Que - javaScript</h2>
+                <img id="8-img" src="../pages/assets/images/assignment8.JPG" alt="">
+                <div id="8-div">
+                    <p id="8-p"> "At this point we start to learn Javascript "</p>
+                    <a href="https://github.com/sachinivindoya/IJSE-Assignment8" target="_blank">
+                        <button id="8-view">View</button></a>
+                </div>
+            </div>
 </body>
 </html>
