--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -116,5 +116,16 @@
                         <button id="8-view">View</button></a>
                 </div>
             </div>
+
+            <!--Assignment 9-->
+            <div>
+                <h2 id="Assignment9">KITT - javaScript</h2>
+                <img id="9-img" src="../pages/assets/images/assignment9.JPG" alt="">
+                <div id="9-div">
+                    <p id="9-p"> "We create famous Knight rider car light system using javascript. "</p>
+                    <a href="https://github.com/sachinivindoya/IJSE-Assignment-9" target="_blank">
+                        <button id="9-view">View</button></a>
+                </div>
+            </div>
 </body>
 </html>
