--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -127,5 +127,16 @@
                         <button id="9-view">View</button></a>
                 </div>
             </div>
+
+            <!--Assignment 10-->
+            <div>
+                <h2 id="Assignment10">Calculator - javaScript</h2>
+                <img id="10-img" src="../pages/assets/images/assignment10.JPG" alt="">
+                <div id="10-div">
+                    <p id="10-p"> "We create famous Knight rider car light system using javascript. "</p>
+                    <a href="https://github.com/sachinivindoya/calculatorJs" target="_blank">
+                        <button id="10-view">View</button></a>
+                </div>
+            </div>
 </body>
 </html>
