--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -138,5 +138,16 @@
                         <button id="10-view">View</button></a>
                 </div>
             </div>
+
+            <!--Assignment 11-->
+            <div>
+                <h2 id="Assignment11">POS - javaScript</h2>
+                <img id="11-img" src="../pages/assets/images/assignment11.JPG" alt="">
+                <div id="11-div">
+                    <p id="11-p"> "full web page POS system Using javascript and boostrap framework "</p>
+                    <a href="https://github.com/sachinivindoya/TechieMarket_POS" target="_blank">
+                        <button id="11-view">View</button></a>
+                </div>
+            </div>
 </body>
 </html>
