finalized assignment structure

--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -149,5 +149,8 @@
                         <button id="11-view">View</button></a>
                 </div>
             </div>
+        </section>
+    </section>
+</main>
 </body>
 </html>
