--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -30,23 +30,23 @@
 
             <!--Assignment 2 (inclass)-->
             <div>
-                <h2 id="Assignment2">Wireframe </h2>
-                <img id="2-img" src="../pages/assets/images/assignment 2.JPG" alt="">
-                <div id="2-div">
-                    <p id="2-p"> "This In class assignment includes more practice about wireframe I got. "</p>
+                <h2 id="Assignment_2">Wireframe </h2>
+                <img id="2_img" src="../pages/assets/images/assignment 2.JPG" alt="">
+                <div id="2_div">
+                    <p id="2_p"> "This In class assignment includes more practice about wireframe I got. "</p>
                     <a href="https://drive.google.com/file/d/1ZSF8RU-U1SmwdBN9QH9sO_PRki1Sq48x/view" target="_blank">
-                        <button id="2-view">View</button></a>
+                        <button id="2_view">View</button></a>
                 </div>
             </div>
 
             <!--Assignment 2-->
             <div>
-                <h2 id="Assignment2.1">HTML </h2>
-                <img id="2.1-img" src="../pages/assets/images/assignment2.JPG" alt="">
-                <div id="2.1-div">
-                    <p id="2.1-p"> "This helped me to get basic understand about basic HTML. We implement our websites structure using HTML "</p>
+                <h2 id="Assignment2">HTML </h2>
+                <img id="2-img" src="../pages/assets/images/assignment2.JPG" alt="">
+                <div id="2-div">
+                    <p id="2-p"> "This helped me to get basic understand about basic HTML. We implement our websites structure using HTML "</p>
                     <a href="https://drive.google.com/file/d/126Lj9LEYGAEmUzE1p0be8Qdv7HLe7PKz/view" target="_blank">
-                        <button id="2.1-view">View</button></a>
+                        <button id="2-view">View</button></a>
                 </div>
             </div>
 
