--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -18,134 +18,134 @@
         <section id="projectSect">
             <!--Assignment 1-->
             <div>
-                <h2 id="Assignment1">Beginning </h2>
-                <img id="1-img" src="../pages/assets/images/assignment1.JPG" alt="">
-                <div id="1-div">
-                    <p id="1-p">"This includes my very first beginning to web development. In this I've learned how to gather requirements,
+                <h2>Beginning </h2>
+                <img  src="../pages/assets/images/assignment1.JPG" alt="">
+                <div class="As">
+                    <p>"This includes my very first beginning to web development. In this I've learned how to gather requirements,
                         wireframe,siteMap and prototype.You can find those things related to my digital resume"</p>
                     <a href="https://drive.google.com/drive/folders/1t5gRbmblEzpky3limGvKuKWyynU0jwYC?usp=drive_link" target="_blank">
-                        <button id="1-view">View</button></a>
+                        <button>View</button></a>
                 </div>
             </div>
 
             <!--Assignment 2 (inclass)-->
             <div>
-                <h2 id="Assignment_2">Wireframe </h2>
-                <img id="2_img" src="../pages/assets/images/assignment 2.JPG" alt="">
-                <div id="2_div">
-                    <p id="2_p"> "This In class assignment includes more practice about wireframe I got. "</p>
+                <h2>Wireframe </h2>
+                <img src="../pages/assets/images/assignment 2.JPG" alt="">
+                <div class="As">
+                    <p> "This In class assignment includes more practice about wireframe I got. "</p>
                     <a href="https://drive.google.com/file/d/1ZSF8RU-U1SmwdBN9QH9sO_PRki1Sq48x/view" target="_blank">
-                        <button id="2_view">View</button></a>
+                        <button>View</button></a>
                 </div>
             </div>
 
             <!--Assignment 2-->
             <div>
-                <h2 id="Assignment2">HTML </h2>
-                <img id="2-img" src="../pages/assets/images/assignment2.JPG" alt="">
-                <div id="2-div">
-                    <p id="2-p"> "This helped me to get basic understand about basic HTML. We implement our websites structure using HTML "</p>
+                <h2>HTML </h2>
+                <img src="../pages/assets/images/assignment2.JPG" alt="">
+                <div class="As">
+                    <p> "This helped me to get basic understand about basic HTML. We implement our websites structure using HTML "</p>
                     <a href="https://drive.google.com/file/d/126Lj9LEYGAEmUzE1p0be8Qdv7HLe7PKz/view" target="_blank">
-                        <button id="2-view">View</button></a>
+                        <button>View</button></a>
                 </div>
             </div>
 
             <!--Assignment 3-->
             <div>
-                <h2 id="Assignment3">CSS </h2>
-                <img id="3-img" src="../pages/assets/images/assignment3.JPG" alt="">
-                <div id="3-div">
-                    <p id="3-p"> "CSS is a incredible way to do decorating websites. In here we practiced some decorations and terms in CSS "</p>
+                <h2>CSS </h2>
+                <img src="../pages/assets/images/assignment3.JPG" alt="">
+                <div class="As">
+                    <p> "CSS is a incredible way to do decorating websites. In here we practiced some decorations and terms in CSS "</p>
                     <a href="https://github.com/sachinivindoya/IJSE_IT_Assignment03" target="_blank">
-                        <button id="3-view">View</button></a>
+                        <button>View</button></a>
                 </div>
             </div>
 
             <!--Assignment 4-->
             <div>
-                <h2 id="Assignment4">CSS Animation </h2>
-                <img id="4-img" src="../pages/assets/images/assignment4.JPG" alt="">
-                <div id="4-div">
-                    <p id="4-p"> "In this we learned how to do animations with using CSS keyframes."</p>
+                <h2>CSS Animation </h2>
+                <img src="../pages/assets/images/assignment4.JPG" alt="">
+                <div class="As">
+                    <p> "In this we learned how to do animations with using CSS keyframes."</p>
                     <a href="https://github.com/sachinivindoya/Assignment04" target="_blank">
-                        <button id="4-view">View</button></a>
+                        <button>View</button></a>
                 </div>
             </div>
 
             <!--Assignment 5-->
             <div>
-                <h2 id="Assignment5">Responsive</h2>
-                <img id="5-img" src="../pages/assets/images/assignment5.JPG" alt="">
-                <div id="5-div">
-                    <p id="5-p"> "In this we learned how to do responsive a web page."</p>
+                <h2>Responsive</h2>
+                <img src="../pages/assets/images/assignment5.JPG" alt="">
+                <div class="As">
+                    <p> "In this we learned how to do responsive a web page."</p>
                     <a href="https://github.com/sachinivindoya/Assignment05" target="_blank">
-                        <button id="5-view">View</button></a>
+                        <button>View</button></a>
                 </div>
             </div>
 
             <!--Assignment 6-->
             <div>
-                <h2 id="Assignment6">Boostrap</h2>
-                <img id="6-img" src="../pages/assets/images/assignment6.JPG" alt="">
-                <div id="6-div">
-                    <p id="6-p"> "In this we learned how to use boostrap framework."</p>
+                <h2>Boostrap</h2>
+                <img src="../pages/assets/images/assignment6.JPG" alt="">
+                <div class="As">
+                    <p> "In this we learned how to use boostrap framework."</p>
                     <a href="https://github.com/sachinivindoya/IJSE-Assignment6" target="_blank">
-                     <button id="6-view">View</button></a>
+                     <button>View</button></a>
                  </div>
             </div>
 
             <!--Assignment 7-->
             <div>
-                <h2 id="Assignment7">Single Page Application</h2>
-                <img id="7-img" src="../pages/assets/images/assignment7.JPG" alt="">
-                <div id="7-div">
-                    <p id="7-p"> "In this we learned how to create a single page application using boostrap framework."</p>
+                <h2>Single Page Application</h2>
+                <img src="../pages/assets/images/assignment7.JPG" alt="">
+                <div class="As">
+                    <p> "In this we learned how to create a single page application using boostrap framework."</p>
                     <a href="https://github.com/sachinivindoya/IJSE-Assignment07" target="_blank">
-                        <button id="7-view">View</button></a>
+                        <button>View</button></a>
                 </div>
             </div>
 
             <!--Assignment 8-->
             <div>
-                <h2 id="Assignment8">Que - javaScript</h2>
-                <img id="8-img" src="../pages/assets/images/assignment8.JPG" alt="">
-                <div id="8-div">
-                    <p id="8-p"> "At this point we start to learn Javascript "</p>
+                <h2>Que - javaScript</h2>
+                <img  src="../pages/assets/images/assignment8.JPG" alt="">
+                <div class="As">
+                    <p> "At this point we start to learn Javascript "</p>
                     <a href="https://github.com/sachinivindoya/IJSE-Assignment8" target="_blank">
-                        <button id="8-view">View</button></a>
+                        <button>View</button></a>
                 </div>
             </div>
 
             <!--Assignment 9-->
             <div>
-                <h2 id="Assignment9">KITT - javaScript</h2>
-                <img id="9-img" src="../pages/assets/images/assignment9.JPG" alt="">
-                <div id="9-div">
-                    <p id="9-p"> "We create famous Knight rider car light system using javascript. "</p>
+                <h2>KITT - javaScript</h2>
+                <img src="../pages/assets/images/assignment9.JPG" alt="">
+                <div class="As">
+                    <p> "We create famous Knight rider car light system using javascript. "</p>
                     <a href="https://github.com/sachinivindoya/IJSE-Assignment-9" target="_blank">
-                        <button id="9-view">View</button></a>
+                        <button>View</button></a>
                 </div>
             </div>
 
             <!--Assignment 10-->
             <div>
-                <h2 id="Assignment10">Calculator - javaScript</h2>
-                <img id="10-img" src="../pages/assets/images/assignment10.JPG" alt="">
-                <div id="10-div">
-                    <p id="10-p"> "We create famous Knight rider car light system using javascript. "</p>
+                <h2>Calculator - javaScript</h2>
+                <img src="../pages/assets/images/assignment10.JPG" alt="">
+                <div class="As">
+                    <p> "We create famous Knight rider car light system using javascript. "</p>
                     <a href="https://github.com/sachinivindoya/calculatorJs" target="_blank">
-                        <button id="10-view">View</button></a>
+                        <button>View</button></a>
                 </div>
             </div>
 
             <!--Assignment 11-->
             <div>
-                <h2 id="Assignment11">POS - javaScript</h2>
-                <img id="11-img" src="../pages/assets/images/assignment11.JPG" alt="">
-                <div id="11-div">
-                    <p id="11-p"> "full web page POS system Using javascript and boostrap framework "</p>
+                <h2>POS - javaScript</h2>
+                <img  src="../pages/assets/images/assignment11.JPG" alt="">
+                <div class="As">
+                    <p> "full web page POS system Using javascript and boostrap framework "</p>
                     <a href="https://github.com/sachinivindoya/TechieMarket_POS" target="_blank">
-                        <button id="11-view">View</button></a>
+                        <button>View</button></a>
                 </div>
             </div>
         </section>
