--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <img src="./assets/image/next.png" onclick="rightScrollButtonClicked()"
                  class="slideButtons" id="nextButton" alt="">
         </div>
-        <div>   <button> View Assignments </button></div>
+        <div>   <button> <a href="pages/Assignment.html" target="_blank">View Assignments </a></button></div>
     </section>
     <!--gallery sectioning-->
     <section id="gallery">
