--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -11,7 +11,7 @@
 <main>
     <!--Assignments-->
     <section>
-        <div>
+        <div class="topic">
             <h1 id="proTopic">Assignments</h1>
         </div>
         <!--Adding section-->
@@ -21,7 +21,7 @@
                 <h2>Beginning </h2>
                 <img  src="../pages/assets/images/assignment1.JPG" alt="">
                 <div class="As">
-                    <p>"This includes my very first beginning to web development. In this I've learned how to gather requirements,
+                    <p>"In this I've learned how to gather requirements,
                         wireframe,siteMap and prototype.You can find those things related to my digital resume"</p>
                     <a href="https://drive.google.com/drive/folders/1t5gRbmblEzpky3limGvKuKWyynU0jwYC?usp=drive_link" target="_blank">
                         <button>View</button></a>
@@ -96,7 +96,7 @@
 
             <!--Assignment 7-->
             <div>
-                <h2>Single Page Application</h2>
+                <h2>SPA</h2>
                 <img src="../pages/assets/images/assignment7.JPG" alt="">
                 <div class="As">
                     <p> "In this we learned how to create a single page application using boostrap framework."</p>
@@ -118,7 +118,7 @@
 
             <!--Assignment 9-->
             <div>
-                <h2>KITT - javaScript</h2>
+                <h2>KITT </h2>
                 <img src="../pages/assets/images/assignment9.JPG" alt="">
                 <div class="As">
                     <p> "We create famous Knight rider car light system using javascript. "</p>
@@ -129,7 +129,7 @@
 
             <!--Assignment 10-->
             <div>
-                <h2>Calculator - javaScript</h2>
+                <h2>Calculator</h2>
                 <img src="../pages/assets/images/assignment10.JPG" alt="">
                 <div class="As">
                     <p> "We create famous Knight rider car light system using javascript. "</p>
@@ -140,7 +140,7 @@
 
             <!--Assignment 11-->
             <div>
-                <h2>POS - javaScript</h2>
+                <h2>POS</h2>
                 <img  src="../pages/assets/images/assignment11.JPG" alt="">
                 <div class="As">
                     <p> "full web page POS system Using javascript and boostrap framework "</p>
