--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -80,6 +80,9 @@
                     <p> "In this we learned how to do responsive a web page."</p>
                     <a href="https://github.com/sachinivindoya/Assignment05" target="_blank">
                         <button>View</button></a>
+                    <br>
+                    <br>
+                    <button>GitHub</button></a>
                 </div>
             </div>
 
@@ -91,6 +94,9 @@
                     <p> "In this we learned how to use boostrap framework."</p>
                     <a href="https://github.com/sachinivindoya/IJSE-Assignment6" target="_blank">
                      <button>View</button></a>
+                    <br>
+                    <br>
+                    <button>Git Hub</button></a>
                  </div>
             </div>
 
@@ -100,8 +106,12 @@
                 <img src="../pages/assets/images/assignment7.JPG" alt="">
                 <div class="As">
                     <p> "In this we learned how to create a single page application using boostrap framework."</p>
-                    <a href="https://github.com/sachinivindoya/IJSE-Assignment07" target="_blank">
+                    <a href="https://sachinivindoya.github.io/IJSE-Assignment07/" target="_blank">
                         <button>View</button></a>
+                    <br>
+                    <br>
+                    <a href="https://github.com/sachinivindoya/IJSE-Assignment07" target="_blank">
+                    <button>GitHub</button></a>
                 </div>
             </div>
 
@@ -111,8 +121,12 @@
                 <img  src="../pages/assets/images/assignment8.JPG" alt="">
                 <div class="As">
                     <p> "At this point we start to learn Javascript "</p>
-                    <a href="https://github.com/sachinivindoya/IJSE-Assignment8" target="_blank">
+                    <a href="https://sachinivindoya.github.io/IJSE-Assignment8/" target="_blank">
                         <button>View</button></a>
+                    <br>
+                    <br>
+                    <a href="https://github.com/sachinivindoya/IJSE-Assignment8" target="_blank">
+                    <button>GitHub</button></a>
                 </div>
             </div>
 
@@ -122,8 +136,12 @@
                 <img src="../pages/assets/images/assignment9.JPG" alt="">
                 <div class="As">
                     <p> "We create famous Knight rider car light system using javascript. "</p>
-                    <a href="https://github.com/sachinivindoya/IJSE-Assignment-9" target="_blank">
+                    <a href="https://sachinivindoya.github.io/IJSE-Assignment-9/" target="_blank">
                         <button>View</button></a>
+                    <br>
+                    <br>
+                    <a href="https://github.com/sachinivindoya/IJSE-Assignment-9" target="_blank">
+                    <button>GitHub</button></a>
                 </div>
             </div>
 
@@ -132,9 +150,13 @@
                 <h2>Calculator</h2>
                 <img src="../pages/assets/images/assignment10.JPG" alt="">
                 <div class="As">
-                    <p> "We create famous Knight rider car light system using javascript. "</p>
-                    <a href="https://github.com/sachinivindoya/calculatorJs" target="_blank">
+                    <p> "This is basic calculator build using javascript "</p>
+                    <a href="https://sachinivindoya.github.io/calculatorJs/" target="_blank">
                         <button>View</button></a>
+                    <br>
+                    <br>
+                    <a href="https://github.com/sachinivindoya/calculatorJs" target="_blank">
+                    <button>GitHub</button></a>
                 </div>
             </div>
 
@@ -144,8 +166,12 @@
                 <img  src="../pages/assets/images/assignment11.JPG" alt="">
                 <div class="As">
                     <p> "full web page POS system Using javascript and boostrap framework "</p>
-                    <a href="https://github.com/sachinivindoya/TechieMarket_POS" target="_blank">
+                    <a href="https://sachinivindoya.github.io/TechieMarket_POS/#" target="_blank">
                         <button>View</button></a>
+                    <br>
+                    <br>
+                    <a href="https://github.com/sachinivindoya/TechieMarket_POS" target="_blank">
+                        <button>GitHub</button></a>
                 </div>
             </div>
         </section>
