finished Assignment section

--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -24,7 +24,7 @@
                     <p>"In this I've learned how to gather requirements,
                         wireframe,siteMap and prototype.You can find those things related to my digital resume"</p>
                     <a href="https://drive.google.com/drive/folders/1t5gRbmblEzpky3limGvKuKWyynU0jwYC?usp=drive_link" target="_blank">
-                        <button>View</button></a>
+                        <button>Drive</button></a>
                 </div>
             </div>
 
@@ -35,7 +35,7 @@
                 <div class="As">
                     <p> "This In class assignment includes more practice about wireframe I got. "</p>
                     <a href="https://drive.google.com/file/d/1ZSF8RU-U1SmwdBN9QH9sO_PRki1Sq48x/view" target="_blank">
-                        <button>View</button></a>
+                        <button>Drive</button></a>
                 </div>
             </div>
 
@@ -46,7 +46,7 @@
                 <div class="As">
                     <p> "This helped me to get basic understand about basic HTML. We implement our websites structure using HTML "</p>
                     <a href="https://drive.google.com/file/d/126Lj9LEYGAEmUzE1p0be8Qdv7HLe7PKz/view" target="_blank">
-                        <button>View</button></a>
+                        <button>Drive</button></a>
                 </div>
             </div>
 
@@ -57,7 +57,7 @@
                 <div class="As">
                     <p> "CSS is a incredible way to do decorating websites. In here we practiced some decorations and terms in CSS "</p>
                     <a href="https://github.com/sachinivindoya/IJSE_IT_Assignment03" target="_blank">
-                        <button>View</button></a>
+                        <button>GitHub</button></a>
                 </div>
             </div>
 
@@ -68,7 +68,7 @@
                 <div class="As">
                     <p> "In this we learned how to do animations with using CSS keyframes."</p>
                     <a href="https://github.com/sachinivindoya/Assignment04" target="_blank">
-                        <button>View</button></a>
+                        <button>GitHub</button></a>
                 </div>
             </div>
 
@@ -79,10 +79,7 @@
                 <div class="As">
                     <p> "In this we learned how to do responsive a web page."</p>
                     <a href="https://github.com/sachinivindoya/Assignment05" target="_blank">
-                        <button>View</button></a>
-                    <br>
-                    <br>
-                    <button>GitHub</button></a>
+                        <button>GitHub</button></a>
                 </div>
             </div>
 
@@ -92,11 +89,12 @@
                 <img src="../pages/assets/images/assignment6.JPG" alt="">
                 <div class="As">
                     <p> "In this we learned how to use boostrap framework."</p>
-                    <a href="https://github.com/sachinivindoya/IJSE-Assignment6" target="_blank">
+                    <a href="https://sachinivindoya.github.io/IJSE-Assignment6/" target="_blank">
                      <button>View</button></a>
                     <br>
                     <br>
-                    <button>Git Hub</button></a>
+                    <a href="https://github.com/sachinivindoya/IJSE-Assignment6" target="_blank">
+                    <button>GitHub</button></a>
                  </div>
             </div>
 
