--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -115,7 +115,7 @@
 
             <!--Assignment 8-->
             <div>
-                <h2>Que - javaScript</h2>
+                <h2>Que </h2>
                 <img  src="../pages/assets/images/assignment8.JPG" alt="">
                 <div class="As">
                     <p> "At this point we start to learn Javascript "</p>
