--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
             <img src="./assets/image/next.png" onclick="rightScrollButtonClicked()"
                  class="slideButtons" id="nextButton" alt="">
         </div>
-        <div>   <div class="ViewBtn"> <a href="pages/Assignment.html" target="_blank">View Assignments </a></div></div>
+         <div class="ViewAssignment"> <a href="pages/Assignment.html" target="_blank">Go To Assignments </a>
+         </div>
+
     </section>
     <!--gallery sectioning-->
     <section id="gallery">
