--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
             PROJECTS DONE BY ME
         </span>
         <br>
+        <div></div>
 
       <!--  <div id="categoryParent">
             <a id="typeAll" class onclick="typeAllClicked()">All</a>
@@ -240,8 +241,8 @@
         </div>
          <div class="ViewAssignment"> <a href="pages/Assignment.html" target="_blank">Go To Assignments </a>
          </div>
-
     </section>
+
     <!--gallery sectioning-->
     <section id="gallery">
         <!--title-->
