--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
         </ul>
     </nav>
 
-    <button id="header-Nav">
-        <i class="fa-solid fa-bars"></i>
-    </button>
+
 </section>
 </header>
 
@@ -49,8 +47,8 @@
             <div>
                 <!--description-->
                 <aside>
-                    <h3>Hello , </h3>
-                    <h1><span>I'm a </span> Blogger | Software Engineer student</h1>
+                    <h3>Hello , I am</h3>
+                    <h1> Blogger | Web Designer | Software Engineer student</h1>
                     <h1>S<span class="typing"></span>|</h1>
                      <button> Get CV </button>
                     <!--social images-->
@@ -124,14 +122,14 @@
     <section id="education">
        <div class="eduTitle"><h1>My Education Journey</h1></div>
         <ul class="eduMenu">
-            <li style="--accent-color:#41516C">
+            <li style="--accent-color: #7ecb79">
                 <div class="date">2017</div>
                 <div class="title">GCE Ordinary Level Examination - A6 C3</div>
                 <div class="imgScl"><img src="assets/image/ds.png"></div>
                 <div class="descr"> WP/KL/ D.S.Senanayake Central College <br> <br>Junior Prefect, Member of vollyball team etc.</div>
 
             </li>
-            <li style="--accent-color:#FBCA3E">
+            <li style="--accent-color:#7ecb79">
                 <div class="date">2020</div>
                 <div class="title">GCE Advanced Level Examination</div>
                 <div class="imgScl"><img src="assets/image/gmv.png"> </div>
@@ -143,12 +141,12 @@
                 <div class="descr"> Passed Advanced Level with 1A & 3 B's with the rank of 398 in Kalutara Distric.<br>
                     Selected to the one of Best University In Sri Lanka</div>
             </li>
-            <li style="--accent-color:#1B5F8C">
+            <li style="--accent-color:#7ecb79">
                 <div class="date">2021 May</div>
                 <div class="title">Turning Point</div>
                 <div class="descr">Choosing Software Engineering as My future Career because of insatiable desire.</div>
             </li>
-            <li style="--accent-color:#4CADAD">
+            <li style="--accent-color:#7ecb79">
                 <div class="date">present</div>
                 <div class="title">Higher Education</div>
                 <div class="imgScl"><img src="assets/image/ijse.png"></div>
@@ -160,7 +158,7 @@
     <!-- projects  -->
     <section id="projectsSectionMainParent">
         <span id="mainHeading">
-            PROJECTS DONE BY ME
+            PROJECTS
         </span>
         <br>
         <div></div>
